[package]
name = "mint-stake"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "mint_stake"
proc-macro = true

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { git = "https://github.com/coral-xyz/anchor", features = ["init-if-needed"] }
anchor-spl = {git = "https://github.com/coral-xyz/anchor"}
winnow = "=0.4.1"
mpl-token-metadata = { version = "=1.9.0", features = ["no-entrypoint"] }
proc-macro2 = "1.0"
toml_datetime = "=0.6.1"
quote = "1.0"
syn = "1.0"
